# target-spec-json

./: .cspell.json  .deny.toml  .git-blame-ignore-revs  .prettierignore  CHANGELOG.md  Cargo.toml  README.md
.github/.cspell/: project-dictionary.txt
.github/workflows/: ci.yml  release.yml
ci/: gen.sh
src/: error.rs  lib.rs  process.rs
tests/: test.rs
tools/: cfg  target-spec.json  target_spec.sh  tidy.sh
tools/ci/: gen.sh
tools/codegen/: Cargo.toml
tools/codegen/src/: cfgs.rs  main.rs
