[package]
name = "target-spec-json"
version = "0.1.4"
edition = "2021"
rust-version = "1.57"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/target-spec-json"
keywords = ["serde", "serialization"]
categories = ["parser-implementations"]
exclude = ["/.*", "/tools"]
description = """
Structured access to rustc `--print target-spec-json` and `--print all-target-specs-json`.
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
resolver = "2"
members = ["tools/codegen"]

[lib]
doc-scrape-examples = false

# Note: serde is public dependencies.
[dependencies]
serde = { version = "1.0.165", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
anyhow = "1"
static_assertions = "1"
